fix(types/List.Item): the `add` action accepts a value

--- a/src/components/List.Item.mdx
+++ b/src/components/List.Item.mdx
@@ -38,7 +38,7 @@ const { List } = createList(myAtom);
 
 function Example() {
   <List.Item>
-    {({fields, item, index, count, moveUp, moveDown, add, remove }) =>
+    {({fields, item, index, count, add, remove, moveUp, moveDown }) =>
       /* render item */
     }
   </List.Item>
@@ -47,16 +47,16 @@ function Example() {
 
 ## Children Props
 
-| Name     | Type                                  | Description                                                                                                               |
-| -------- | ------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- |
-| fields   | `Fields`                              | The fields of current item, as returned from the builder function.                                                        |
-| item     | `ListItem<Fields>`                    | The item from the internal splitList.                                                                                     |
-| index    | `number`                              | The index of the current item.                                                                                            |
-| count    | `number`                              | Total count of items in the list                                                                                          |
-| add      | `(before?: ListItem<Fields>) => void` | Append a new item to the end of the list. WHen called with current item, it will be prepend with a new item.              |
-| remove   | `() => void`                          | Removes the current item.                                                                                                 |
-| moveUp   | `() => void`                          | Moves the current item one slot up in the list. When called for the first item, the action is no-op.                      |
-| moveDown | `() => void`                          | Moves the current item one slot down in the list. When called for the last item, the item moves to the start of the list. |
+| Name     | Type                                                                   | Description                                                                                                |
+| -------- | ---------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------- |
+| fields   | `Fields`                                                               | The fields of the current item, as created with the listAtom's `fields` config function.                   |
+| item     | `ListItem<Fields>`                                                     | The item from the internal splitList.                                                                      |
+| index    | `number`                                                               | The index of the current item.                                                                             |
+| count    | `number`                                                               | Total count of items in the list                                                                           |
+| add      | `(before?: ListItem<Fields>, value?: FormFieldValues<Fields>) => void` | Append a new item to the list. When called with the current item, it will prepend it.                      |
+| remove   | `() => void`                                                           | Removes the current item from the list.                                                                    |
+| moveUp   | `() => void`                                                           | Moves the current item one slot up in the list. Supports carousel - the first item will become the last.   |
+| moveDown | `() => void`                                                           | Moves the current item one slot down in the list. Supports carousel - the last item will become the first. |
 
 ## Examples
 
