docs: fix class

--- a/src/components/List.Item.mdx
+++ b/src/components/List.Item.mdx
@@ -12,7 +12,7 @@ import * as ItemStories from "./item.stories";
 
 <hgroup>
 
-<p class="category">Components</p>
+<p className="category">Components</p>
 
 # List.Item
 
