--- a/src/components/Docs.mdx
+++ b/src/components/Docs.mdx
@@ -12,7 +12,7 @@ import * as ListStories from "./list.stories";
 
 <hgroup>
 
-<p class="category">Components</p>
+<p className="category">Components</p>
 
 # @form-atoms/list-atom
 
