--- a/src/components/List.Add.mdx
+++ b/src/components/List.Add.mdx
@@ -10,7 +10,7 @@ import * as AddStories from "./add.stories";
 
 <hgroup>
 
-<p class="category">Components</p>
+<p className="category">Components</p>
 
 # List.Add
 
