--- a/src/components/List.Empty.mdx
+++ b/src/components/List.Empty.mdx
@@ -10,7 +10,7 @@ import * as EmptyStories from "./empty.stories";
 
 <hgroup>
 
-<p class="category">Components</p>
+<p className="category">Components</p>
 
 # List.Empty
 
