--- a/src/components/List.Nested.mdx
+++ b/src/components/List.Nested.mdx
@@ -10,7 +10,7 @@ import * as NestedStories from "./nested.stories";
 
 <hgroup>
 
-<p class="category">Components</p>
+<p className="category">Components</p>
 
 # List.Nested
 
