--- a/src/components/list.mdx
+++ b/src/components/list.mdx
@@ -10,7 +10,7 @@ import * as ListStories from "./list.stories";
 
 <hgroup>
 
-<p class="category">Components</p>
+<p className="category">Components</p>
 
 # List
 
