--- a/src/components/List.Add.mdx
+++ b/src/components/List.Add.mdx
@@ -1,10 +1,3 @@
-import {
-  Meta,
-  Canvas,
-  Story,
-  ArgTypes,
-  Description,
-} from "@storybook/addon-docs/blocks";
 import { Example } from "../../.storybook/blocks/Example";
 import * as AddStories from "./add.stories";
 
@@ -34,56 +27,66 @@ function CustomAddButton() {
 }
 ```
 
+## Props
+
+| Name     | Type                                | Description   | Default                                                                                                         |
+| -------- | ----------------------------------- | ------------- | --------------------------------------------------------------------------------------------------------------- |
+| children | `(props: AddChildrenProps) => void` | A render prop | <code>`({add}) => <button type="button" onClick={() => add()}>`<br/>&nbsp;&nbsp;Add item<br/>`</button>`</code> |
+
+## Children Props
+
+| Name | Type                                        | Description                                                                                  |
+| ---- | ------------------------------------------- | -------------------------------------------------------------------------------------------- |
+| add  | `(value?: FormFieldValues<Fields>) => void` | An action to append a new item to the end of the list. Optionaly set the items initial value |
+
 ## Examples
 
-<Example of={AddStories.WithValue} >
+<Example of={AddStories.EmptyOrInitialValue} >
 
 ```tsx
-import { type FieldAtom, fieldAtom, InputField } from "form-atoms";
+import { fieldAtom, InputField } from "form-atoms";
 import { listAtom, createlist } from "@form-atoms/list-atom";
 
 const productPros = listAtom({
-  value: [{ feature: "quality materials used" }, { feature: "not so heavy" }],
+  value: [],
   fields: () => ({ feature: fieldAtom({ value: "" }) }),
 });
 
 const { List } = createList(productPros);
 
 const Example = () => (
-  <>
-    <label style={{ marginBottom: 16 }}>
-      What do you like about your shoes?
-    </label>
-    <List>
-      <List.Item>
-        {({ fields, remove }) => (
-          <fieldset role="group">
-            <InputField atom={fields.feature} component="input" />
-            <button
-              type="button"
-              className="outline secondary"
-              onClick={remove}
-            >
-              Remove
-            </button>
-          </fieldset>
-        )}
-      </List.Item>
+  <List
+    initialValue={[
+      { feature: "quality materials used" },
+      { feature: "not so heavy" },
+    ]}
+  >
+    <List.Item>
+      {({ fields, remove }) => (
+        <fieldset role="group">
+          <InputField atom={fields.feature} component="input" />
+          <button type="button" className="outline secondary" onClick={remove}>
+            Remove
+          </button>
+        </fieldset>
+      )}
+    </List.Item>
+    <div className="grid">
+      <List.Add />
+      <div />
       <List.Add>
         {({ add }) => (
           <button
             type="button"
-            className="outline"
-            onClick={() =>
-              add({ feature: fieldAtom({ value: "beautiful colors" }) })
-            }
+            className="secondary"
+            onClick={() => add({ feature: "beautiful colors" })}
           >
             Add initialized item
           </button>
         )}
       </List.Add>
-    </List>
-  </>
+    </div>
+  </List>
 );
 ```
 
@@ -92,12 +95,11 @@ const Example = () => (
 <Example of={AddStories.PositioningAddButton} >
 
 ```tsx
-import { type FieldAtom, fieldAtom, InputField } from "form-atoms";
+import { fieldAtom, InputField } from "form-atoms";
 import { listAtom, createlist } from "@form-atoms/list-atom";
 
 const atom = listAtom({
-  name: "productFeatures",
-  value: [{ feature: "quality materials" }, { feature: "solid build" }],
+  value: [],
   fields: () => ({ feature: fieldAtom({ value: "" }) }),
 });
 
@@ -105,13 +107,11 @@ const { List } = createList(atom);
 
 const Example = () => {
   return (
-    <List>
+    <>
       <List.Empty>
         <article style={{ textAlign: "center" }}>
-          <p>
-            You don't have any items in your list. Start by adding your first
-            one.
-          </p>
+          <h5>You don't have any items in your list.</h5>
+          <p>Start by adding your first one.</p>
           <List.Add>
             {({ add }) => (
               <button className="outline" onClick={() => add()}>
@@ -144,7 +144,7 @@ const Example = () => {
           </div>
         )}
       </List.Item>
-    </List>
+    </>
   );
 };
 ```
