--- a/src/components/List.Nested.mdx
+++ b/src/components/List.Nested.mdx
@@ -18,6 +18,42 @@ Render a nested list within `<List.Item>`.
 
 </hgroup>
 
+## Usage
+
+When using a listAtom within a listAtom, you can use the `List.Nested` component to render the nested list. The `atom` prop is required and should be set to the nested list atom.
+
+```tsx
+import { createList } from "@form-atoms/list-atom";
+
+const { List } = createList(yourListAtom);
+
+function Example() {
+  return (
+    <List.Item>
+      {({ fields }) => (
+        <List.Nested atom={fields.yourNestedListAtom}>
+          {({ List }) => <>{/* Use the List.Item, List.Add ...  */}</>}
+        </List.Nested>
+      )}
+    </List.Item>
+  );
+}
+```
+
+The component enables you to `createList()` in the JSX. Essentially you can use it as the `ListOf` import even without nesting:
+
+```tsx
+import { ListOf } from "@form-atoms/list-atom";
+
+function Component() {
+  return (
+    <ListOf atom={yourListAtom}>
+      {({ List }) => <>{/* Use the List.Item, List.Add ...  */}</>}
+    </ListOf>
+  );
+}
+```
+
 ## Examples
 
 <Example of={NestedStories.NestedList} >
