--- a/src/components/Docs.mdx
+++ b/src/components/Docs.mdx
@@ -14,6 +14,55 @@ import * as ListStories from "./list.stories";
 
 The Jotai `form-atoms` extension to render performant lists with easy controls.
 
+<nav>
+  <ul>
+    <li>
+      <a
+        aria-label="GitHub Stars"
+        href="https://github.com/form-atoms/list-atom"
+      >
+        <img
+          alt="GitHub Stars"
+          src="https://img.shields.io/github/stars/form-atoms/list-atom?style=for-the-badge&labelColor=24292e&logo=github"
+        />
+      </a>
+    </li>
+    <li>
+      <a
+        aria-label="Minzipped size"
+        href="https://bundlephobia.com/result?p=%40form-atoms/list-atom"
+      >
+        <img
+          alt="Bundlephobia"
+          src="https://img.shields.io/bundlephobia/minzip/%40form-atoms/list-atom?style=for-the-badge&labelColor=24292e"
+        />
+      </a>
+    </li>
+    <li>
+      <a
+        aria-label="NPM version"
+        href="https://www.npmjs.com/package/%40form-atoms/list-atom"
+      >
+        <img
+          alt="NPM Version"
+          src="https://img.shields.io/npm/v/%40form-atoms/list-atom?style=for-the-badge&labelColor=24292e"
+        />
+      </a>
+    </li>
+    <li>
+      <a
+        aria-label="Code coverage report"
+        href="https://codecov.io/gh/form-atoms/list-atom"
+      >
+        <img
+          alt="Code coverage"
+          src="https://img.shields.io/codecov/c/gh/form-atoms/list-atom?style=for-the-badge&labelColor=24292e"
+        />
+      </a>
+    </li>
+  </ul>
+</nav>
+
 </hgroup>
 
 ## Features
