--- a/src/components/Docs.mdx
+++ b/src/components/Docs.mdx
@@ -23,7 +23,7 @@ The Jotai `form-atoms` extension to render performant lists with easy controls.
       >
         <img
           alt="GitHub Stars"
-          src="https://img.shields.io/github/stars/form-atoms/list-atom?style=for-the-badge&labelColor=24292e&logo=github"
+          src="https://img.shields.io/github/stars/form-atoms/list-atom?style=for-the-badge&labelColor=202632&logo=github"
         />
       </a>
     </li>
@@ -34,7 +34,7 @@ The Jotai `form-atoms` extension to render performant lists with easy controls.
       >
         <img
           alt="Bundlephobia"
-          src="https://img.shields.io/bundlephobia/minzip/%40form-atoms/list-atom?style=for-the-badge&labelColor=24292e"
+          src="https://img.shields.io/bundlephobia/minzip/%40form-atoms/list-atom?style=for-the-badge&labelColor=202632"
         />
       </a>
     </li>
@@ -45,7 +45,7 @@ The Jotai `form-atoms` extension to render performant lists with easy controls.
       >
         <img
           alt="NPM Version"
-          src="https://img.shields.io/npm/v/%40form-atoms/list-atom?style=for-the-badge&labelColor=24292e"
+          src="https://img.shields.io/npm/v/%40form-atoms/list-atom?style=for-the-badge&labelColor=202632"
         />
       </a>
     </li>
@@ -56,7 +56,7 @@ The Jotai `form-atoms` extension to render performant lists with easy controls.
       >
         <img
           alt="Code coverage"
-          src="https://img.shields.io/codecov/c/gh/form-atoms/list-atom?style=for-the-badge&labelColor=24292e"
+          src="https://img.shields.io/codecov/c/gh/form-atoms/list-atom?style=for-the-badge&labelColor=202632"
         />
       </a>
     </li>
