--- a/src/components/List.Item.mdx
+++ b/src/components/List.Item.mdx
@@ -1,10 +1,4 @@
-import {
-  Meta,
-  Canvas,
-  Story,
-  ArgTypes,
-  Description,
-} from "@storybook/addon-docs/blocks";
+import { Meta } from "@storybook/addon-docs/blocks";
 import { Example } from "../../.storybook/blocks/Example";
 import * as ItemStories from "./item.stories";
 
