fix(ListOf): rename Nested to Of, deprecate the Nested
Shorter is better.

--- a/src/Intro.mdx
+++ b/src/Intro.mdx
@@ -64,7 +64,7 @@ The Jotai `form-atoms` extension to render performant lists with easy controls.
 - 🎮 **Easy controls**. The `<List.Item>` provides `add`, `remove`, `moveUp` and `moveDown` actions for each item.
 - 🧩 **Compound JSX Components**. Use the `<List.Add />`, or `<List.Empty />` instead of manual hooks.
 - 🔑 **Scoped field `name`s**. The fields are dynamically indexed enabling serialization to `FormData`.
-- 🐢 **Lists all the way down**. Render lists <sup>within lists <sup>within lists...</sup></sup> with the `<List.Nested>` alias `<ListOf>`.
+- 🐢 **Lists all the way down**. Render lists <sup>within lists <sup>within lists...</sup></sup> with the `<List.Of>`.
 
 <Example of={QuickStartExample}>
 
