fix(add-action): return the created item
this enables to initialize the item in a callback when it's created

--- a/src/components/List.Add.mdx
+++ b/src/components/List.Add.mdx
@@ -35,9 +35,9 @@ function CustomAddButton() {
 
 ## Children Props
 
-| Name | Type                                        | Description                                                                                  |
-| ---- | ------------------------------------------- | -------------------------------------------------------------------------------------------- |
-| add  | `(value?: FormFieldValues<Fields>) => void` | An action to append a new item to the end of the list. Optionaly set the items initial value |
+| Name | Type                                                        | Description                                                                                  |
+| ---- | ----------------------------------------------------------- | -------------------------------------------------------------------------------------------- |
+| add  | `(value?: FormFieldValues<Fields>) => ListItemForm<Fields>` | An action to append a new item to the end of the list. Optionaly set the items initial value |
 
 ## Examples
 
